--- a/index.html
+++ b/index.html
@@ -5,9 +5,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homework6</title>
     <link rel="stylesheet" href="./assets/reset.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     <link rel="stylesheet" href="./assets/style.css">
 </head>
 <body>
-    
+    <header class="header">
+        <div class="content">
+            <img src="./assets/showcase.jpg" class="logo" alt="logo">
+            <h1 class="name">Welcome To Traversy Media</h1>
+            <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, vel.</p>
+        </div>
+    </header>
+    <main>
+        <article class="services">
+            <div class="container">
+                <i class="fab fa-youtube fa-3x"></i>
+                <h2>Youtube</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, esse.</p>
+            </div>
+            <div class="container">
+                <i class="fas fa-chalkboard-teacher fa-3x"></i>
+                <h2>Courses</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, esse.</p>               
+            </div>
+            <div class="container"> 
+                <i class="fas fa-briefcase fa-3x"></i>
+                <h2>Freelancing Projects</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, esse.</p>   
+            </div>
+        </article>
+        <article class="about-us">
+            <div class="info">
+                <i class="fas fa-laptop-code fa-10x"></i>
+                <div class="info-text">
+                    <h2>About us</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non eos aperiam labore consectetur maiores ea magni exercitationem similique laborum sed, unde, autem vel iure doloribus aliquid. Aspernatur explicabo consectetur consequatur non nesciunt debitis quos alias soluta, ratione, ipsa officia reiciendis.</p>  
+                </div>
+            </div>
+        </article>
+    </main>
+    <footer class="footer">
+        <p>Traversy Media © 2019</p>
+    </footer>
 </body>
 </html>
